# ServerDeploy

./: .gitignore  README.md  full.yml  inventory.yml  readme.md  requirements.yml
host_vars/terrarium/: restic.yml  vault.yml
playbooks/: backup.yml  disks.yml  dns.yml  monitoring.yml  mount.yml  security.yml
roles/backup-restic/: .ansible-lint  .gitlab-ci.yml  .yamllint  CHANGELOG.md  README.md  flake.nix  pyproject.toml  renovate.json
roles/backup-restic/defaults/main/: 00-base.yml  01-pkgs.yml  10-backends.yml  20-scheduler.yml  90-alerting.yml
roles/backup-restic/meta/: .galaxy_install_info  main.yml
roles/backup-restic/tasks/: backup.yml  backup_schedule.yml  desktop_dependencies.yml  hook.yml  hooks_handler.yml  logrotate.yml  main.yml  prune.yml  prune_external.yml  prune_schedule.yml  restic_bin_gc.yml
roles/backup-restic/templates/etc/logrotate.d/: backup-restic.j2
roles/backup-restic/templates/etc/systemd/system/: restic-backup.service  restic-backup.timer  restic-prune.service  restic-prune.timer
roles/backup-restic/templates/srv/restic/: cri_alerting.sh.j2  cri_restic.sh.j2  cri_restic_wrapper.sh.j2  cri_utils.sh.j2  extra_vars.j2  files_to_exclude.j2  files_to_include.j2  hooks_vars.j2  retry_handler.sh.j2
roles/backup-restic/vars/: Archlinux.yml  Ubuntu.yml
roles/fail2ban/: README.md
roles/fail2ban/handlers/: main.yml
roles/fail2ban/tasks/: main.yml
roles/fail2ban/templates/: jail.local
roles/mount/tasks/: main.yml
roles/raid1/: README.md
roles/raid1/handlers/: main.yml
roles/smartd/: NOTICE  README.md
roles/ssh/: README.md
(+8 files in other folders)
